fixat scrollbar

--- a/code/main.css
+++ b/code/main.css
@@ -166,9 +166,9 @@ body {
 
 .scroll-box {
   display: flex;
-  height: 500px;
-  margin-bottom: 50px;
-  
+  height: 460px;
+  margin-bottom: 0px;
+  overflow-x: scroll;
 }
 
 .box {
@@ -178,18 +178,29 @@ body {
   flex-direction: column;
   border-radius: 8px;
   margin-left: 52px;
+  margin-right: 0px;
+  box-shadow: rgba(0, 0, 0, 0.147) 4px 4px 12px;
+  margin-bottom: 0;
+}
+
+.img-box {
+  border-radius: 8px 8px 0px 0px;
+  object-fit: cover;
+  box-shadow: rgba(0, 0, 0, 0.147) 4px 4px 12px;
 }
 
 .box-title {
   font-size: 28px;
   font-weight: 400;
-  margin-left: 17px;
+  margin-left: 14px;
+  margin-bottom: 0px;
 }
 
 .bottom-stars {
   display: flex;
+  margin-top: 0px;
   margin-left: 20px;
-  margin-bottom: 0;
+  margin-bottom: 20px;
 }
 
 .star {
@@ -202,22 +213,29 @@ body {
   font-size: 14px;
   font-weight: 400;
   margin-left: 10px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .bottom-text {
-  margin-top: 0px;
   font-size: 18px;
   font-weight: 400;
+  margin-top: 0px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .box-button {
   width: 179px;
-  height: 44px;
   background-color: #E3170A;
   color: white;
   font-size: 16px;
   font-weight: 700;
   border: none;
   border-radius: 4px;
+  padding: 15px;
+  margin-top: 5px;
+  margin-left: 160px;
 }
+
 
